[doc] added module note